# OpenCLHarris

./: CMakeLists.txt  Featuredetectors.cpp  Featuredetectors.h  Hariis_cl.h  Harris_cl.cpp  alltest.cl  gftt.cl  main.cpp
